edit user managment frontend and backend. Possibility to list, create and delete users
